# pmpp

./: .gitignore  Chapter01.ipynb  Chapter02.ipynb  pixi.toml  session.vim
src/ch02/cuda-notes/: CMakeLists.txt  vector_addition.cu
src/ch02/mojo/: vector_addition.mojo
src/ch03/cuda-notes/: CMakeLists.txt  color_to_grey.cu  image_blur.cu  matrix_multiplication.cu  utils.cpp  utils.hpp  vector_addition.cu
